syntax = "proto3";

package grpc;

message VersionRequest {}

message VersionResponse {
    string name = 1;
    string version = 2;
    string build = 3;
    string build_date = 4;
    uint64 uptime = 5;
}

service Grpc {
    rpc Version (VersionRequest) returns (VersionResponse) {}
}

